[package]
name = "rust_p2p_share"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.53", features = [
    "tcp",
    "mdns",
    "noise",
    "yamux",
    "macros",
    "tokio",
    "identify",
    "ping",
    "async-std",
] }
futures = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
clap = { version = "4.4", features = ["derive"] }
